WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271873
Check imageURL null for Element::parserSetAttributes inconsistency issue
https://bugs.webkit.org/show_bug.cgi?id=271873
Summary
Check imageURL null for Element::parserSetAttributes inconsistency issue
Yusuke Suzuki
Reported
2024-03-28 19:23:02 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-28 19:23:14 PDT
<
rdar://problem/125592339
>
Yusuke Suzuki
Comment 2
2024-03-28 19:23:24 PDT
rdar://125543680
Yusuke Suzuki
Comment 3
2024-03-28 19:27:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26600
EWS
Comment 4
2024-03-29 00:30:15 PDT
Committed
276826@main
(d113ccd09708): <
https://commits.webkit.org/276826@main
> Reviewed commits have been landed. Closing PR #26600 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug